readme and build